parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELIF

Grammar

Rule 0     S' -> program
Rule 1     program -> function_list
Rule 2     function_list -> function_list function
Rule 3     function_list -> function
Rule 4     function -> JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block
Rule 5     param_list -> param_list COMMA ID
Rule 6     param_list -> ID
Rule 7     param_list -> empty
Rule 8     block -> statement
Rule 9     block -> block NEWLINE statement
Rule 10    statement -> ID ASSIGN expression
Rule 11    statement -> REMATE expression
Rule 12    statement -> IF if_condition COLON NEWLINE block else_clause
Rule 13    if_condition -> LPAREN expression RPAREN
Rule 14    if_condition -> expression
Rule 15    else_clause -> ELSE COLON NEWLINE block
Rule 16    else_clause -> empty
Rule 17    statement -> FOR ID EN RANGE LPAREN expression RPAREN COLON NEWLINE block
Rule 18    statement -> expression
Rule 19    statement -> NOP
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression GE expression
Rule 27    expression -> expression LE expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression AND expression
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    expression -> NUMBER
Rule 32    expression -> STRING
Rule 33    expression -> ID
Rule 34    expression -> ID LPAREN arg_list RPAREN
Rule 35    arg_list -> arg_list COMMA expression
Rule 36    arg_list -> expression
Rule 37    arg_list -> empty
Rule 38    empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ASSIGN               : 10
COLON                : 4 12 15 17
COMMA                : 5 35
DIVIDE               : 23
ELIF                 : 
ELSE                 : 15
EN                   : 17
EQ                   : 28
FOR                  : 17
GE                   : 26
GT                   : 24
ID                   : 4 5 6 10 17 33 34
IF                   : 12
JUGADOR              : 4
LE                   : 27
LPAREN               : 4 13 17 30 34
LT                   : 25
MINUS                : 21
NEWLINE              : 4 9 12 15 17
NOP                  : 19
NUMBER               : 31
PLUS                 : 20
RANGE                : 17
REMATE               : 11
RPAREN               : 4 13 17 30 34
STRING               : 32
TIMES                : 22
error                : 

Nonterminals, with rules where they appear

arg_list             : 34 35
block                : 4 9 12 15 17
else_clause          : 12
empty                : 7 16 37
expression           : 10 11 13 14 17 18 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 35 36
function             : 2 3
function_list        : 1 2
if_condition         : 12
param_list           : 4 5
program              : 0
statement            : 8 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_list
    (2) function_list -> . function_list function
    (3) function_list -> . function
    (4) function -> . JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block

    JUGADOR         shift and go to state 4

    program                        shift and go to state 1
    function_list                  shift and go to state 2
    function                       shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function_list .
    (2) function_list -> function_list . function
    (4) function -> . JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block

    $end            reduce using rule 1 (program -> function_list .)
    JUGADOR         shift and go to state 4

    function                       shift and go to state 5

state 3

    (3) function_list -> function .

    JUGADOR         reduce using rule 3 (function_list -> function .)
    $end            reduce using rule 3 (function_list -> function .)


state 4

    (4) function -> JUGADOR . ID LPAREN param_list RPAREN COLON NEWLINE block

    ID              shift and go to state 6


state 5

    (2) function_list -> function_list function .

    JUGADOR         reduce using rule 2 (function_list -> function_list function .)
    $end            reduce using rule 2 (function_list -> function_list function .)


state 6

    (4) function -> JUGADOR ID . LPAREN param_list RPAREN COLON NEWLINE block

    LPAREN          shift and go to state 7


state 7

    (4) function -> JUGADOR ID LPAREN . param_list RPAREN COLON NEWLINE block
    (5) param_list -> . param_list COMMA ID
    (6) param_list -> . ID
    (7) param_list -> . empty
    (38) empty -> .

    ID              shift and go to state 8
    RPAREN          reduce using rule 38 (empty -> .)
    COMMA           reduce using rule 38 (empty -> .)

    param_list                     shift and go to state 9
    empty                          shift and go to state 10

state 8

    (6) param_list -> ID .

    RPAREN          reduce using rule 6 (param_list -> ID .)
    COMMA           reduce using rule 6 (param_list -> ID .)


state 9

    (4) function -> JUGADOR ID LPAREN param_list . RPAREN COLON NEWLINE block
    (5) param_list -> param_list . COMMA ID

    RPAREN          shift and go to state 11
    COMMA           shift and go to state 12


state 10

    (7) param_list -> empty .

    RPAREN          reduce using rule 7 (param_list -> empty .)
    COMMA           reduce using rule 7 (param_list -> empty .)


state 11

    (4) function -> JUGADOR ID LPAREN param_list RPAREN . COLON NEWLINE block

    COLON           shift and go to state 13


state 12

    (5) param_list -> param_list COMMA . ID

    ID              shift and go to state 14


state 13

    (4) function -> JUGADOR ID LPAREN param_list RPAREN COLON . NEWLINE block

    NEWLINE         shift and go to state 15


state 14

    (5) param_list -> param_list COMMA ID .

    RPAREN          reduce using rule 5 (param_list -> param_list COMMA ID .)
    COMMA           reduce using rule 5 (param_list -> param_list COMMA ID .)


state 15

    (4) function -> JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE . block
    (8) block -> . statement
    (9) block -> . block NEWLINE statement
    (10) statement -> . ID ASSIGN expression
    (11) statement -> . REMATE expression
    (12) statement -> . IF if_condition COLON NEWLINE block else_clause
    (17) statement -> . FOR ID EN RANGE LPAREN expression RPAREN COLON NEWLINE block
    (18) statement -> . expression
    (19) statement -> . NOP
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    ID              shift and go to state 16
    REMATE          shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    NOP             shift and go to state 24
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    block                          shift and go to state 18
    statement                      shift and go to state 19
    expression                     shift and go to state 20

state 16

    (10) statement -> ID . ASSIGN expression
    (33) expression -> ID .
    (34) expression -> ID . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 27
    PLUS            reduce using rule 33 (expression -> ID .)
    MINUS           reduce using rule 33 (expression -> ID .)
    TIMES           reduce using rule 33 (expression -> ID .)
    DIVIDE          reduce using rule 33 (expression -> ID .)
    GT              reduce using rule 33 (expression -> ID .)
    LT              reduce using rule 33 (expression -> ID .)
    GE              reduce using rule 33 (expression -> ID .)
    LE              reduce using rule 33 (expression -> ID .)
    EQ              reduce using rule 33 (expression -> ID .)
    AND             reduce using rule 33 (expression -> ID .)
    NEWLINE         reduce using rule 33 (expression -> ID .)
    JUGADOR         reduce using rule 33 (expression -> ID .)
    $end            reduce using rule 33 (expression -> ID .)
    ELSE            reduce using rule 33 (expression -> ID .)
    LPAREN          shift and go to state 28


state 17

    (30) expression -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 29

state 18

    (4) function -> JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block .
    (9) block -> block . NEWLINE statement

    JUGADOR         reduce using rule 4 (function -> JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block .)
    $end            reduce using rule 4 (function -> JUGADOR ID LPAREN param_list RPAREN COLON NEWLINE block .)
    NEWLINE         shift and go to state 31


state 19

    (8) block -> statement .

    NEWLINE         reduce using rule 8 (block -> statement .)
    JUGADOR         reduce using rule 8 (block -> statement .)
    $end            reduce using rule 8 (block -> statement .)
    ELSE            reduce using rule 8 (block -> statement .)


state 20

    (18) statement -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    NEWLINE         reduce using rule 18 (statement -> expression .)
    JUGADOR         reduce using rule 18 (statement -> expression .)
    $end            reduce using rule 18 (statement -> expression .)
    ELSE            reduce using rule 18 (statement -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 21

    (11) statement -> REMATE . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 42

state 22

    (12) statement -> IF . if_condition COLON NEWLINE block else_clause
    (13) if_condition -> . LPAREN expression RPAREN
    (14) if_condition -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 44
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    if_condition                   shift and go to state 43
    expression                     shift and go to state 45

state 23

    (17) statement -> FOR . ID EN RANGE LPAREN expression RPAREN COLON NEWLINE block

    ID              shift and go to state 46


state 24

    (19) statement -> NOP .

    NEWLINE         reduce using rule 19 (statement -> NOP .)
    JUGADOR         reduce using rule 19 (statement -> NOP .)
    $end            reduce using rule 19 (statement -> NOP .)
    ELSE            reduce using rule 19 (statement -> NOP .)


state 25

    (31) expression -> NUMBER .

    PLUS            reduce using rule 31 (expression -> NUMBER .)
    MINUS           reduce using rule 31 (expression -> NUMBER .)
    TIMES           reduce using rule 31 (expression -> NUMBER .)
    DIVIDE          reduce using rule 31 (expression -> NUMBER .)
    GT              reduce using rule 31 (expression -> NUMBER .)
    LT              reduce using rule 31 (expression -> NUMBER .)
    GE              reduce using rule 31 (expression -> NUMBER .)
    LE              reduce using rule 31 (expression -> NUMBER .)
    EQ              reduce using rule 31 (expression -> NUMBER .)
    AND             reduce using rule 31 (expression -> NUMBER .)
    NEWLINE         reduce using rule 31 (expression -> NUMBER .)
    JUGADOR         reduce using rule 31 (expression -> NUMBER .)
    $end            reduce using rule 31 (expression -> NUMBER .)
    RPAREN          reduce using rule 31 (expression -> NUMBER .)
    ELSE            reduce using rule 31 (expression -> NUMBER .)
    COLON           reduce using rule 31 (expression -> NUMBER .)
    COMMA           reduce using rule 31 (expression -> NUMBER .)


state 26

    (32) expression -> STRING .

    PLUS            reduce using rule 32 (expression -> STRING .)
    MINUS           reduce using rule 32 (expression -> STRING .)
    TIMES           reduce using rule 32 (expression -> STRING .)
    DIVIDE          reduce using rule 32 (expression -> STRING .)
    GT              reduce using rule 32 (expression -> STRING .)
    LT              reduce using rule 32 (expression -> STRING .)
    GE              reduce using rule 32 (expression -> STRING .)
    LE              reduce using rule 32 (expression -> STRING .)
    EQ              reduce using rule 32 (expression -> STRING .)
    AND             reduce using rule 32 (expression -> STRING .)
    NEWLINE         reduce using rule 32 (expression -> STRING .)
    JUGADOR         reduce using rule 32 (expression -> STRING .)
    $end            reduce using rule 32 (expression -> STRING .)
    RPAREN          reduce using rule 32 (expression -> STRING .)
    ELSE            reduce using rule 32 (expression -> STRING .)
    COLON           reduce using rule 32 (expression -> STRING .)
    COMMA           reduce using rule 32 (expression -> STRING .)


state 27

    (10) statement -> ID ASSIGN . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 47

state 28

    (34) expression -> ID LPAREN . arg_list RPAREN
    (35) arg_list -> . arg_list COMMA expression
    (36) arg_list -> . expression
    (37) arg_list -> . empty
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN
    (38) empty -> .

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30
    RPAREN          reduce using rule 38 (empty -> .)
    COMMA           reduce using rule 38 (empty -> .)

    arg_list                       shift and go to state 48
    expression                     shift and go to state 49
    empty                          shift and go to state 50

state 29

    (30) expression -> LPAREN expression . RPAREN
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 30

    (33) expression -> ID .
    (34) expression -> ID . LPAREN arg_list RPAREN

    RPAREN          reduce using rule 33 (expression -> ID .)
    PLUS            reduce using rule 33 (expression -> ID .)
    MINUS           reduce using rule 33 (expression -> ID .)
    TIMES           reduce using rule 33 (expression -> ID .)
    DIVIDE          reduce using rule 33 (expression -> ID .)
    GT              reduce using rule 33 (expression -> ID .)
    LT              reduce using rule 33 (expression -> ID .)
    GE              reduce using rule 33 (expression -> ID .)
    LE              reduce using rule 33 (expression -> ID .)
    EQ              reduce using rule 33 (expression -> ID .)
    AND             reduce using rule 33 (expression -> ID .)
    NEWLINE         reduce using rule 33 (expression -> ID .)
    JUGADOR         reduce using rule 33 (expression -> ID .)
    $end            reduce using rule 33 (expression -> ID .)
    ELSE            reduce using rule 33 (expression -> ID .)
    COLON           reduce using rule 33 (expression -> ID .)
    COMMA           reduce using rule 33 (expression -> ID .)
    LPAREN          shift and go to state 28


state 31

    (9) block -> block NEWLINE . statement
    (10) statement -> . ID ASSIGN expression
    (11) statement -> . REMATE expression
    (12) statement -> . IF if_condition COLON NEWLINE block else_clause
    (17) statement -> . FOR ID EN RANGE LPAREN expression RPAREN COLON NEWLINE block
    (18) statement -> . expression
    (19) statement -> . NOP
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    ID              shift and go to state 16
    REMATE          shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    NOP             shift and go to state 24
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    statement                      shift and go to state 52
    expression                     shift and go to state 20

state 32

    (20) expression -> expression PLUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 53

state 33

    (21) expression -> expression MINUS . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 54

state 34

    (22) expression -> expression TIMES . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 55

state 35

    (23) expression -> expression DIVIDE . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 56

state 36

    (24) expression -> expression GT . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 57

state 37

    (25) expression -> expression LT . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 58

state 38

    (26) expression -> expression GE . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 59

state 39

    (27) expression -> expression LE . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 60

state 40

    (28) expression -> expression EQ . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 61

state 41

    (29) expression -> expression AND . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 62

state 42

    (11) statement -> REMATE expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    NEWLINE         reduce using rule 11 (statement -> REMATE expression .)
    JUGADOR         reduce using rule 11 (statement -> REMATE expression .)
    $end            reduce using rule 11 (statement -> REMATE expression .)
    ELSE            reduce using rule 11 (statement -> REMATE expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 43

    (12) statement -> IF if_condition . COLON NEWLINE block else_clause

    COLON           shift and go to state 63


state 44

    (13) if_condition -> LPAREN . expression RPAREN
    (30) expression -> LPAREN . expression RPAREN
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression AND expression
    (30) expression -> . LPAREN expression RPAREN
    (31) expression -> . NUMBER
    (32) expression -> . STRING
    (33) expression -> . ID
    (34) expression -> . ID LPAREN arg_list RPAREN

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26
    ID              shift and go to state 30

    expression                     shift and go to state 64

state 45

    (14) if_condition -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    COLON           reduce using rule 14 (if_condition -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 46

    (17) statement -> FOR ID . EN RANGE LPAREN expression RPAREN COLON NEWLINE block

    EN              shift and go to state 65


state 47

    (10) statement -> ID ASSIGN expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    NEWLINE         reduce using rule 10 (statement -> ID ASSIGN expression .)
    JUGADOR         reduce using rule 10 (statement -> ID ASSIGN expression .)
    $end            reduce using rule 10 (statement -> ID ASSIGN expression .)
    ELSE            reduce using rule 10 (statement -> ID ASSIGN expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 48

    (34) expression -> ID LPAREN arg_list . RPAREN
    (35) arg_list -> arg_list . COMMA expression

    RPAREN          shift and go to state 66
    COMMA           shift and go to state 67


state 49

    (36) arg_list -> expression .
    (20) expression -> expression . PLUS expression
    (21) expression -> expression . MINUS expression
    (22) expression -> expression . TIMES expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . AND expression

    RPAREN          reduce using rule 36 (arg_list -> expression .)
    COMMA           reduce using rule 36 (arg_list -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    GE              shift and go to state 38
    LE              shift and go to state 39
    EQ              shift and go to state 40
    AND             shift and go to state 41


state 50

    (37) arg_list -> empty .

    RPAREN          reduce using rule 37 (arg_list -> empty .)
    COMMA           reduce using rule 37 (arg_list -> empty .)


state 51

    (30) expression -> LPAREN expression RPAREN .
